--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="onsenui/css/onsenui.css">
     <link rel="stylesheet" type="text/css" href="onsenui/css/onsen-css-components.css">
     <script src="onsenui/js/onsenui.min.js"></script>
+    <script src="angular2/bundles/angular2-polyfills.js"></script>
   </head>
   <body>
     <div id="app">Loading...</div>
